<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/purple"
    android:columnCount="2"
    android:rowCount="3"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/radio_btn"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="168dp"
        android:layout_height="70dp"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/checkbox"
        android:textSize="25sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/switch_btn"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="175dp"
        android:layout_height="95dp"

        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/image_btn"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/back" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/logout_btn" />

</GridLayout>