...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:text="Login" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/textView2"
        android:hint="@string/login_email" />
...
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="256dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="275dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/emailEditText"/>

</LinearLayout>
